[package]
name = "operator-script"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.9.0"
blake2b-ref = { version = "0.3", default-features = false }

[build-dependencies]
cc = "1.0"
blake2b-rs = "0.2.0"